Make the window at the bottom transluscent

--- a/viXcode4/viXcode4Window.xib
+++ b/viXcode4/viXcode4Window.xib
@@ -41,9 +41,9 @@
 				<string key="NSClassName">NSApplication</string>
 			</object>
 			<object class="NSWindowTemplate" id="1005">
-				<int key="NSWindowStyleMask">15</int>
+				<int key="NSWindowStyleMask">8223</int>
 				<int key="NSWindowBacking">2</int>
-				<string key="NSWindowRect">{{196, 240}, {280, 22}}</string>
+				<string key="NSWindowRect">{{196, 240}, {271, 22}}</string>
 				<int key="NSWTFlags">1618481152</int>
 				<string key="NSWindowTitle">viXcode4</string>
 				<string key="NSWindowClass">NSPanel</string>
@@ -55,14 +55,15 @@
 						<bool key="EncodedWithXMLCoder">YES</bool>
 						<object class="NSTextField" id="271192455">
 							<reference key="NSNextResponder" ref="1006"/>
-							<int key="NSvFlags">303</int>
+							<int key="NSvFlags">271</int>
 							<string key="NSFrameSize">{280, 22}</string>
 							<reference key="NSSuperview" ref="1006"/>
 							<reference key="NSWindow"/>
+							<reference key="NSNextKeyView"/>
 							<bool key="NSEnabled">YES</bool>
 							<object class="NSTextFieldCell" key="NSCell" id="615070205">
-								<int key="NSCellFlags">-1804468671</int>
-								<int key="NSCellFlags2">272630784</int>
+								<int key="NSCellFlags">-1805517247</int>
+								<int key="NSCellFlags2">272631808</int>
 								<string key="NSContents"/>
 								<object class="NSFont" key="NSSupport">
 									<string key="NSName">LucidaGrande</string>
@@ -92,7 +93,7 @@
 							</object>
 						</object>
 					</object>
-					<string key="NSFrame">{{7, 11}, {280, 22}}</string>
+					<string key="NSFrame">{{7, 11}, {271, 22}}</string>
 					<reference key="NSSuperview"/>
 					<reference key="NSWindow"/>
 					<reference key="NSNextKeyView" ref="271192455"/>
@@ -249,7 +250,7 @@
 				<reference key="dict.values" ref="0"/>
 			</object>
 			<nil key="sourceID"/>
-			<int key="maxID">11</int>
+			<int key="maxID">16</int>
 		</object>
 		<object class="IBClassDescriber" key="IBDocument.Classes">
 			<object class="NSMutableArray" key="referencedPartialClassDescriptions">
