--- a/viXcode/viXcodeWindow.xib
+++ b/viXcode/viXcodeWindow.xib
@@ -32,7 +32,7 @@
 		<object class="NSMutableArray" key="IBDocument.RootObjects" id="1000">
 			<bool key="EncodedWithXMLCoder">YES</bool>
 			<object class="NSCustomObject" id="1001">
-				<string key="NSClassName">viXcode4</string>
+				<string key="NSClassName">viXcode</string>
 			</object>
 			<object class="NSCustomObject" id="1003">
 				<string key="NSClassName">FirstResponder</string>
@@ -45,7 +45,7 @@
 				<int key="NSWindowBacking">2</int>
 				<string key="NSWindowRect">{{196, 240}, {271, 22}}</string>
 				<int key="NSWTFlags">-529002496</int>
-				<string key="NSWindowTitle">viXcode4</string>
+				<string key="NSWindowTitle">viXcode</string>
 				<string key="NSWindowClass">NSPanel</string>
 				<nil key="NSViewClass"/>
 				<object class="NSView" key="NSWindowView" id="1006">
@@ -256,7 +256,7 @@
 			<object class="NSMutableArray" key="referencedPartialClassDescriptions">
 				<bool key="EncodedWithXMLCoder">YES</bool>
 				<object class="IBPartialClassDescription">
-					<string key="className">viXcode4</string>
+					<string key="className">viXcode</string>
 					<string key="superclassName">NSWindowController</string>
 					<object class="NSMutableDictionary" key="actions">
 						<bool key="EncodedWithXMLCoder">YES</bool>
@@ -310,7 +310,7 @@
 					</object>
 					<object class="IBClassDescriptionSource" key="sourceIdentifier">
 						<string key="majorKey">IBProjectSource</string>
-						<string key="minorKey">./Classes/viXcode4.h</string>
+						<string key="minorKey">./Classes/viXcode.h</string>
 					</object>
 				</object>
 			</object>
